@startuml

title __CURSJAVAFX's Class Diagram__\n


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.AddAnimalController {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.AnimalController {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.CalendarController {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.HelloApplication {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.LoginController {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.MainController {
      }

  }
  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.RegistrationController {
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.SceneController {
      }

  }
  


    namespace om.example.cursjavafx {
      namespace classes {
        class com.example.cursjavafx.classes.Animal {
        }
      }
    }

  


    namespace om.example.cursjavafx {
      namespace classes {
        class com.example.cursjavafx.classes.CalendarActivity {
        }
      }
    }

  


    namespace om.example.cursjavafx {
      namespace classes {
        class com.example.cursjavafx.classes.EventsAnimals {
        }
      }
    }

  


    namespace om.example.cursjavafx {
      namespace classes {
        class com.example.cursjavafx.classes.Pills {
        }
      }

  }
  


    namespace om.example.cursjavafx {
      namespace database {
        class com.example.cursjavafx.database.PostgreDB {
        }
      }
    }

  


    namespace om.example.cursjavafx {
      namespace database {
        interface com.example.cursjavafx.database.dbDao {
        }
      }
    }

  


    namespace om.example.cursjavafx {
      namespace utils {
        enum Scenes {
        }
      }
    }

  

  com.example.cursjavafx.AddAnimalController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.AddAnimalController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.AnimalController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.AnimalController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.CalendarController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.CalendarController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.HelloApplication -up-|> javafx.application.Application
  com.example.cursjavafx.LoginController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.MainController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.MainController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.RegistrationController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.database.PostgreDB .up.|> com.example.cursjavafx.database.dbDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
